kubernetes/apps/default/etherpad/app/ext-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ext-etherpad
  namespace: default
  labels:
    app.kubernetes.io/instance: etherpad
    app.kubernetes.io/name: etherpad
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_CLOUDFLARED_TUNNEL_ID}.cfargotunnel.com"
    external-dns.home.arpa/enabled: "true"
    nginx.ingress.kubernetes.io/app-root: /p/pad
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - &host "${SECRET_OTHER_DOMAIN_1}"
      secretName: ext-etherpad-tls
  rules:
    - host: *host
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: etherpad
                port:
                  number: 9001
